--- a/Exploratory Data Analysis/Covid ETL Pipeline V2.ipynb
+++ b/Exploratory Data Analysis/Covid ETL Pipeline V2.ipynb
@@ -25,7 +25,7 @@
     "1. Extract Data\n",
     "2. Data Exploration and Cleansing (Transform)\n",
     "3. Exploratory Data Analysis\n",
-    "4. Export Data"
+    "4. Load"
    ]
   },
   {
